build/log/idf_py_stderr_output_660105
Command: make -j 14 all
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/main.c:26:
/home/umesh_adwait/esp-idf/components/spi_flash/include/esp_spi_flash.h:6:2: warning: #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead [-Wcpp]
    6 | #warning esp_spi_flash.h is deprecated, please use spi_flash_mmap.h instead
      |  ^~~~~~~
In file included from /home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:2:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c: In function 'dsp_process':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.h:18:21: error: invalid suffix 'f' on integer constant
   18 | #define SAMPLE_RATE 50f // Hz
      |                     ^~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:51:72: note: in expansion of macro 'SAMPLE_RATE'
   51 |         int16_t sample = (int16_t)(sinf(2.0f * 3.14159265f * 1.0f * i /SAMPLE_RATE) * 1000);
      |                                                                        ^~~~~~~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/process.c:85:21: warning: variable 'fft_buffer' set but not used [-Wunused-but-set-variable]
   85 |     static int16_t *fft_buffer;
      |                     ^~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:180: esp-idf/main/CMakeFiles/__idf_main.dir/process.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
